plugins {
    id 'java'
    id 'maven-publish'
}

group = 'io.github.retrooper'
version = '2.0.0'
description = 'packetevents'
java.sourceCompatibility = JavaVersion.VERSION_1_8
publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

wrapper {
    gradleVersion = "7.3"
    distributionType = Wrapper.DistributionType.ALL
}
